# tree

./: .gitignore  README.md  pyproject.toml  start_app.bat  start_app.bat - ショートカット.lnk  tree.db-shm  新規 テキスト ドキュメント.txt
.claude/: settings.local.json
app/: __main__.py
app/db/: connection.py  schema.py
app/etl/: loaders.py  pipeline.py
app/export/: html_report.py  svg_pedigree.py  templates.py
app/gui/: detail_panel.py  main.py  main_window.py  ml_panel.py  pedigree_widget.py  pedigree_widget2.py  pedigree_widget3.py  pedigree_widget4.py  sow_report_panel.py
app/scoring/: engine.py  ml_engine.py  ml_features.py
app/services/: zip_extract_service.py
data/廃豚記録/: report.XLS
data/死亡記録/: report.XLS
docs/: SCHEMA.md  SPEC.md  TODO.md  データ構造.txt  前提.txt  母豚成績評価ルール Ver.1.txt
docs/design/: pedigree_sample.txt
models/: lgbm_sow.txt
