[project]
name = "tree"
version = "0.1.0"
description = "養豚家系図・系統評価ソフト"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "xlrd>=2.0",
    "openpyxl>=3.1",
    "PyQt6>=6.7",
    "lightgbm>=4.0",
    "shap>=0.43",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
]

[tool.uv]
package = false

[project.scripts]
tree = "app.__main__:main"
